--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,4 +2,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "/node_modules/ng-zorro-antd/ng-zorro-antd.min.css";
+@import '/node_modules/ng-zorro-antd/ng-zorro-antd.min.css';
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-size: 16px;
+}
