--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,1 @@
-<div class="flex h-full w-full items-center justify-center">
-  <div class="aspect-square w-[20rem] rounded-md border border-disabled p-4">
-    <h1 class="text-center text-2xl">Story app</h1>
-  </div>
-</div>
+<router-outlet></router-outlet>
