--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -15,3 +15,15 @@
 body {
   font-size: 16px;
 }
+
+p {
+  margin: 0 !important;
+}
+
+.slick-dots li {
+  background-color: #69c0ff !important;
+}
+
+.slick-active button {
+  background-color: #0050b3 !important;
+}
