--- a/client/src/app/shared/modules/defaultLayout/defaultLayout.component.html
+++ b/client/src/app/shared/modules/defaultLayout/defaultLayout.component.html
@@ -1,4 +1,9 @@
 <div class="h-screen w-screen overflow-y-auto overflow-x-hidden">
   <app-header></app-header>
-  <div class="w-full px-3 py-2"><ng-content></ng-content></div>
+  <div class="w-full px-3 py-2">
+    <div *ngIf="isLoading" class="min-h-content flex w-full items-center justify-center">
+      <span nz-icon nzType="loading" nzTheme="outline" class="text-5xl text-primary-5"></span>
+    </div>
+    <ng-content *ngIf="!isLoading"></ng-content>
+  </div>
 </div>
