--- a/client/src/app/shared/modules/header/header.component.html
+++ b/client/src/app/shared/modules/header/header.component.html
@@ -1,10 +1,11 @@
 <ng-container *ngIf="currentUser$ | async as currentUser">
   <div
-    class="sticky top-0 flex w-full items-center justify-between border-b border-disabled bg-white px-3 py-2"
+    class="sticky top-0 z-50 flex h-12 w-full items-center justify-between border-b border-disabled bg-white px-3 py-2"
   >
-    <img src="../../../../assets/logo.png" alt="logo" class="h-8" />
+    <img src="../../../../assets/logo.svg" alt="logo" class="h-8 object-contain" />
+
     <button
-      class="flex h-8 items-center justify-center rounded bg-dust-red-2 px-2 text-base font-semibold transition-colors hover:bg-dust-red-5 hover:text-white"
+      class="flex h-full items-center justify-center rounded bg-dust-red-2 px-2 text-base font-semibold transition-colors hover:bg-dust-red-5 hover:text-white"
     >
       {{ currentUser.name }}
     </button>
